5Realization:add_best_estimate_and probable_range_of_alignment&accuracy_of_synch_win

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,10 @@
 \usepackage{fancyhdr}
 \usepackage{titlesec}
 \usepackage{hyperref}
+\usepackage{float}
 \usepackage{amsmath}
+\usepackage{ulem}
+\usepackage{multirow}
 
 \titleclass{\subsubsubsection}{straight}[\subsection]
 
@@ -41,19 +44,21 @@
 \pagestyle{fancy}
 \graphicspath{ {images/} }
 
-%\title{
-%	{Thesis Title}\\
-%	{\large Institution Name}\\
-%	{\includegraphics{university.jpg}}
-%}
-%\author{Author Name}
-%\date{Day Month Year}
+\title{
+	{Development of the timing system for the Bunch-to-Bucket transfer between the FAIR accelerators }\\
+	{\large Institution Name}\\
+	{\includegraphics{university.jpg}}
+}
+\author{Jiaoni Bai}
+\date{11th March 2017}
+
+\renewcommand{\labelitemii}{$\bullet$}
 
 \begin{document}
-%\maketitle
-%\chapter*{Zusammenfassung}
-%\chapter*{Widmung}
-%\chapter*{Deklaration}
+\maketitle
+\chapter*{Zusammenfassung}
+\chapter*{Widmung}
+\chapter*{Deklaration}
 \tableofcontents
 
 
