--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,8 @@
 \documentclass[12pt,twoside]{report}
+%\usepackage[acronym]{glossaries}
+%\usepackage[acronym,nomain,nonumberlist]{glossaries}
+\usepackage[nopostdot,  style=super, nonumberlist, toc]{glossaries}
+
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{ngerman}
@@ -16,6 +20,426 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{url}
+\usepackage{acronym}
+
+% Generate the glossary
+\makenoidxglossaries
+ 
+%----------------------------------------------------------------------------------------
+%	ABBREVIATIONS
+%----------------------------------------------------------------------------------------
+\setacronymstyle{long-short}
+
+%Ein eigenes Symbolverzeichnis erstellen
+\newglossary[slg]{symbolslist}{syi}{syg}{List of symbols}
+\newglossary[slg]{abbreslist}{syi}{syg}{List of Abbreviations}
+%Befehle für Symbole
+\newglossaryentry{symb:C18}{
+name=$C_{SIS18}$,
+description={Circumference of the designed orbit of SIS18},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:C100}{
+name=$C_{SIS100}$,
+description={Circumference of the designed orbit of SIS100},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:18h1}{
+name=$f_{h=1}^{SIS18}$,
+description={Revolution frequency of SIS18},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:18h2}{
+name=$f_{h=2}^{SIS18}$,
+description={Caivity frequency of SIS18},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:period_18h1}{
+name=$T_{h=1}^{SIS18}$,
+description={Revolution period of SIS18},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:period_18h2}{
+name=$T_{h=2}^{SIS18}$,
+description={Period of the caivity frequency of SIS18},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:100h1}{
+name=$f_{h=1}^{SIS100}$,
+description={Revolution frequency of SIS100},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:100h10}{
+name=$f_{h=10}^{SIS100}$,
+description={Caivity frequency of SIS100},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:period_100h1}{
+name=$T_{h=1}^{SIS100}$,
+description={Revolution period of SIS100},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:period_100h10}{
+name=$T_{h=10}^{SIS100}$,
+description={Period of the caivity frequency of SIS100},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:pha_shift}{
+name=$\Delta \phi_{shift}$,
+description={Phase shift to be achieved by the phase shift method},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:freq_modulation}{
+name=$\Delta f_{rf}(t)$,
+description={Phase shift to be achieved by the phase shift method},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:period_phase}{
+name=T,
+description={Start time of the rf frequency modulation},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:start_phase}{
+name=$t_0$,
+description={Period of frequency modulation},
+sort=symbolpi, type=symbolslist
+}
+\newglossaryentry{symb:syn_phase}{
+name=$\Delta \phi_s(t)$,
+description={Change of the synchronous phase},
+sort=symbolphi, type=symbolslist
+}
+\newglossaryentry{symb:bucket_size}{
+name=$\alpha_b (\phi_s)$,
+description={Bucket area factor},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:s_syn_phase}{
+name=$\phi_s$,
+description={Synchronous phase},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:adia}{
+name=$\varepsilon$,
+description={Adiabaticity parameter},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:chromaticity_x}{
+name=$Q_x$,
+description={Horizontal Chromaticity of SIS18},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:chromaticity_y}{
+name=$Q_y$,
+description={Vertical chromaticity of SIS18},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:c_chromaticity_x}{
+name=$\Delta Q_x$,
+description={Horizontal chromatic tune shift of SIS18 due to the rf frequency modulation},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:c_chromaticity_y}{
+name=$\Delta Q_y$,
+description={Vertical chromatic tune shift of SIS18 due to the rf frequency modulation},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:radius}{
+name=$\frac{\Delta{R}}{R}$,
+description={Ratio between the excursive radius and the designed radius.},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:freq}{
+name=$\frac{\Delta{f}}{f}$,
+description={Ratio between the modulated frequency and the normalized frequency},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:mgenetic}{
+name=$\frac{\Delta{B}}{B}$,
+description={Ratio between the changed magnetic field and the normalized value},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:transition_energy}{
+name=$\gamma_t$,
+description={Transition energy},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:best_align}{
+name=$t_{best}$,
+description={Best estimate of alignment of Reference RF Signals of SIS18 and SIS100},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:probable_aligh}{
+name=$\delta t_{best}$,
+description={Uncertainty of the best estimate of alignment of Reference RF Signals of SIS18 and SIS100},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:harmonic}{
+name=h,
+description={Harmonic number of the rf signal},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:h1phase100}{
+name=$\psi_{h=1}^{SIS100}$,
+description={Predicted SIS100 rf phase at h=1 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:h15phase18}{
+name=$\psi_{h=1/5}^{SIS18}$,
+description={Predicted SIS18 rf phase at h=1/5 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:un_h1phase100}{
+name=$\delta \psi_{h=1}^{SIS100}$,
+description={Uncertainty of the predicted SIS100 rf phase at h=1 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:un_h15phase18}{
+name=$\delta \psi_{h=1/5}^{SIS18}$,
+description={Uncertainty of the predicted SIS18 rf phase at h=1/5 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:h10phase100}{
+name=$\phi_{h=10}^{SIS100}$,
+description={RF phase at the cavity frequency h=10 of SIS100 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:h2phase18}{
+name=$\phi_{h=2}^{SIS18}$,
+description={RF phase at the cavity frequency h=2 of SIS18  },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:un_h10phase100}{
+name=$\delta \phi_{h=10}^{SIS100}$,
+description={Uncertainty of RF phase at the cavity frequency h=10 of SIS100 },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:un_h2phase18}{
+name=$\delta \phi_{h=2}^{SIS18}$,
+description={Uncertainty of RF phase at the cavity frequency h=2 of SIS18  },
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:prediction_time}{
+name=$t_{\psi}$,
+description={Time of the rf phase prediction},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:uncertainty_time}{
+name=$\delta t_{\psi}$,
+description={Uncertainty of the predicted phase advance at time domain},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:upper_time_phase_shift}{
+name=$T_{phase\underline shift}^{upper\underline bound}$,
+description={Upper bound time of the phase shfit process},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:un_upper_time_phase_shift}{
+name=$\delta T_{phase\underline shift}^{upper\underline bound}$,
+description={Uncertainty of the upper bound time of the phase shfit process},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_just_frequency_beating}{
+name=$\Delta \phi_{adjustment}$,
+description={Phase adjustment of the frequency beating method},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_s_alignment}{
+name=$\psi_{s\_alignment}$,
+description={RF phase of the cavity frequency at the start of the probable rang of alignment},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:win_correction}{
+name=$\Delta t_{win \_correct}$,
+description={Time correction for the start of the probable range of alignment to the best estimate of the start of the synchronization  window},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:win_start}{
+name=$WIN_{start}$,
+description={Start of the synchronization  window},
+sort=symbollambda, type=symbolslist
+}
+%Befehle für Abbreviation
+\newglossaryentry{B2B}
+{
+name={B2B},
+description={Bunch to Bucket},type=abbreslist
+}
+\newglossaryentry{GMT}{
+name={GMT},
+description={General Machine Timing},type=abbreslist
+}
+\newglossaryentry{BuTiS}{
+name={BuTiS},
+description={Bunchphase Timing System},type=abbreslist
+}
+
+\newglossaryentry{BI}{
+name={BI},
+description={Beam Instrumentation},type=abbreslist
+}
+\newglossaryentry{CM}{
+name={CM},
+description={Clock Master},type=abbreslist
+}
+\newglossaryentry{MM}{
+name={MM},
+description={Management Master},type=abbreslist
+}
+\newglossaryentry{CCS}{
+name={CCS},
+description={Central Control System },type=abbreslist
+}
+\newglossaryentry{CR}{
+name={CR},
+description={Collector Ring},type=abbreslist
+}
+\newglossaryentry{DSP}{
+name={DSP},
+description={Digital Signal Processor},type=abbreslist
+}
+\newglossaryentry{DM}{name={DM},
+description={Data Master},type=abbreslist
+}
+\newglossaryentry{ESR}{
+name={ESR},
+description={Experimental Storage Ring},type=abbreslist
+}
+\newglossaryentry{FAIR}{
+name={FAIR},
+description={Facility for Antiproton and Ion Research},type=abbreslist
+}
+\newglossaryentry{TM}{
+name={TM},
+description={Timing Master},type=abbreslist
+}
+\newglossaryentry{FEC}{
+name={FEC},
+description={Front End Controller},type=abbreslist
+}
+\newglossaryentry{FESA}{
+name={FESA},
+description={Front-End software Architecture},type=abbreslist
+}
+\newglossaryentry{LSA}{
+name={LSA},
+description={Front-End software Architecture},type=abbreslist
+}
+\newglossaryentry{HESR}{
+name={HESR},
+description={High Energy Storage Ring},type=abbreslist
+}
+\newglossaryentry{LLRF}{
+name={LLRF},
+description={Low-level RF },type=abbreslist
+}
+\newglossaryentry{MPS}{
+name={MPS},
+description={Machine Protection System},type=abbreslist
+}
+\newglossaryentry{NESR}{
+name={ESR},
+description={New Experimental Storage Ring},type=abbreslist
+}
+
+\newglossaryentry{RESR}{name={RESR},
+description={Recycled Experimental Storage Ring},type=abbreslist
+}
+\newglossaryentry{RF}{name={RF},
+description={Radio Frequency},type=abbreslist
+}
+\newglossaryentry{SM}{name={SM},
+description={Settings Management},type=abbreslist
+}
+\newglossaryentry{SIS18}{
+name={SIS18},
+description={Heavy Ion Synchrotron - SchwerIonen Synchrotron (18 Tm magnetic rigidity)},type=abbreslist
+}
+\newglossaryentry{SIS100}{
+name={SIS100},
+description={Heavy Ion Synchrotron - SchwerIonen Synchrotron (100 Tm magnetic rigidity)},type=abbreslist
+}
+\newglossaryentry{TOF}{
+name={TOF},
+description={Time-of-flight},type=abbreslist
+}
+\newglossaryentry{VLAN}{
+name={VLAN},
+description={Virtual Local Area Network},type=abbreslist
+}
+\newglossaryentry{WR}{
+name={WR},
+description={White Rabbit},type=abbreslist
+}
+\newglossaryentry{SCU}{
+name={SCU},
+description={Scalable Control Unit},type=abbreslist
+}
+\newglossaryentry{FPGA}{
+name={FPGA},
+description={Field Programmable Gate Array},type=abbreslist
+}
+\newglossaryentry{TTL}{
+name={TTL},
+description={Transistor–Transistor Logic},type=abbreslist
+}
+\newglossaryentry{PC}{
+name={PC},
+description={Personal Computer},type=abbreslist
+}
+\newglossaryentry{CPU}{
+name={CPU},
+description={Central Processing Unit},type=abbreslist
+}
+
+
+%Befehle für Glossary
+
+% Generate the glossary
+\makenoidxglossaries
+\newglossaryentry{glos:Rrf}{
+name={Reference RF Signal},
+description={Signal generated by the Group DDS and delivered to an individual RF cavity as a reference for the gap signal}
+}
+
+\newglossaryentry{glos:accuracy}{
+name={accuracy},
+description={Closeness of agreement between the observed start and the best estimate of the start of the synchronization window, which is the sum of the precision and trueness}
+}
+
+\newglossaryentry{glos:precision}{
+name={precision},
+description={Closeness of agreement between the actual start of the synchronization window of different SCUs}
+}
+
+\newglossaryentry{glos:truness}{
+name={trueness},
+description={Closeness of agreement between the average actual start of the synchronization window of different SCUs and the best estimation start of the synchronization window}
+}
+\newglossaryentry{glos:Frame_loss_rate}{
+name={Frame loss rate},
+description={The ratio of the number of the lost frames to the number of the theoretic received frames of a tested port}
+}
+\newglossaryentry{glos:latency}{
+name={latency},
+description={The time interval between the time of Xena port receiving frame and the time of another Xena port sending frame}
+}
+\newglossaryentry{glos:jitter}{
+name={latency},
+description={The absolute value of the difference between the latency of two consecutive received frames belonging to the same stream from one Xena port to another Xena port}
+}
+\newglossaryentry{glos:timing_frame}{
+name={timing frame},
+description={Ethernet frame with 110 bytes frame length}
+}
+\newglossaryentry{glos:broadcast}{
+name={broadcast},
+description={-------------------------------------}
+}
+\newglossaryentry{glos:unicast}{
+name={unicast},
+description={-------------------------------------}
+}
 
 \lstset{tabsize=4, %
   frame=shadowbox, %把代码用带有阴影的框圈起来
@@ -109,12 +533,74 @@
 \renewcommand{\labelitemii}{$\bullet$}
 
 \begin{document}
+
 \maketitle
 \chapter*{Zusammenfassung}
 \chapter*{Widmung}
 \chapter*{Deklaration}
+
+%----------------------------------------------------------------------------------------
+%	LIST OF CONTENTS/FIGURES/TABLES PAGES
+%----------------------------------------------------------------------------------------
 \tableofcontents
 
+\listoffigures % Prints the list of figures
+
+\listoftables % Prints the list of tables
+
+
+\clearpage
+
+%Glossary ausgeben
+\printnoidxglossary
+
+%Abbreviation ausgeben
+\printnoidxglossary[type=abbreslist,style=long]
+ 
+%Symbole ausgeben
+\printnoidxglossary[type=symbolslist,style=long]
+
+%\newacronym{GMT}{General Machine Timing}
+%%\newacronym{B2B}{Bunch to Bucket}
+%%\newacronym{BuTiS}{Bunchphase Timing System}
+%\newacronym{BI}{Beam Instrumentation}
+%\newacronym{CM}{Clock Master}
+%\newacronym{CCS}{Central Control System }
+%\newacronym{CR}{Collector Ring}
+%\newacronym{DM}{Data Master}
+%\newacronym{ESR}{Experimental Storage Ring}
+%\newacronym{FAIR}{Facility for Antiproton and Ion Research}
+%\newacronym{FEC}{Front End Controller}
+%\newacronym{FESA}{Front-End software Architecture}
+%\newacronym{HESR}{High Energy Storage Ring}
+%\newacronym{LLRF}{Low-level RF }
+%\newacronym{MPS}{Machine Protection System}
+%\newacronym{NESR}{New Experimental Storage Ring}
+%\newacronym{Reference RF Signal}{Signal generated by the Group DDS and delivered to an individual RF cavity as a reference for the gap signal}
+%\newacronym{RESR}{Recycled Experimental Storage Ring}
+%\newacronym{RF}{Radio Frequency}
+%\newacronym{SM}{Settings Management}
+%\newacronym{SIS18}{Heavy Ion Synchrotron - SchwerIonen Synchrotron (18 Tm magnetic rigidity)}
+%\newacronym{SIS100}{Heavy Ion Synchrotron - SchwerIonen Synchrotron (100 Tm magnetic rigidity)}
+%\newacronym{TOF}{Time-of-flight}
+%\newacronym{VLAN}{Virtual Local Area Network}
+%\newacronym{WR}{White Rabbit}
+%\newacronym{SCU}{Scalable Control Unit}
+%\newacronym{FPGA}{Field Programmable Gate Array}
+%\newacronym{TTL}{Transistor–Transistor Logic}
+%\newacronym{PC}{Personal Computer}
+%\newacronym{CPU}{Central Processing Unit}
+
+
+%----------------------------------------------------------------------------------------
+%	SYMBOLS
+%----------------------------------------------------------------------------------------
+
+
+
+%----------------------------------------------------------------------------------------
+%	THESIS CONTENT - CHAPTERS
+%----------------------------------------------------------------------------------------
 
 \chapter{Introduction}
 \input{chapters/1Introduction}
@@ -133,8 +619,8 @@
 \chapter{Acknowledgement}
 \input{chapters/8Acknowledgement}
 
-\chapter{References}
-\input{chapters/References}
+%\chapter{References}
+%\input{chapters/References}
 \appendix
 \chapter{Formelzeichen}
 \input{chapters/appendix}
@@ -142,4 +628,7 @@
 \input{chapters/appendixB}
 \chapter{Abbildungsverzeichnis}
 \input{chapters/appendixC}
+\bibliography{main}
+\bibliographystyle{plain}
+
 \end{document}
