Concept:Trigger SCU add

--- a/main.tex
+++ b/main.tex
@@ -305,13 +305,28 @@ sort=symbollambda, type=symbolslist
 name=$f_{actual}$ ,
 description={Actual rf freqnecy modulation profile},
 sort=symbollambda, type=symbolslist
-}
+} v
 \newglossaryentry{symb:phase_shift_normalized}{
 name=$f_{normalized}$ ,
 description={Normalized rf freqnecy modulation profile},
 sort=symbollambda, type=symbolslist
 }
+\newglossaryentry{symb:ext_pre}{
+name=$D_{ext}$ ,
+description={Rising time of the extraction kicker of SIS18},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:inj_pre}{
+name=$D_{inj}$ ,
+description={Rising time of the injection kicker of SIS100},
+sort=symbollambda, type=symbolslist
+}
 %Befehle für Abbreviation
+\newglossaryentry{TOF}
+{
+name={TOF},
+description={Time Of Flight},type=abbreslist
+}
 \newglossaryentry{B2B}
 {
 name={B2B},
@@ -467,6 +482,14 @@ description={Phase Shift Module},type=abbreslist
 \newglossaryentry{PCM}{
 name={PCM},
 description={Phase Correction Module},type=abbreslist
+}
+\newglossaryentry{SR}{
+name={SR},
+description={Signal Reproduction},type=abbreslist
+}
+\newglossaryentry{TD}{
+name={TD},
+description={Trigger Decision},type=abbreslist
 }
 
 
