chapter 4 and 5 are done

--- a/main.tex
+++ b/main.tex
@@ -46,42 +46,42 @@ sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:18h1}{
 name=$f_{h=1}^{SIS18}$,
-description={Revolution frequency of SIS18},
+description={RF cavity revolution frequency of SIS18},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:18h2}{
 name=$f_{h=2}^{SIS18}$,
-description={Caivity frequency of SIS18},
+description={RF cavity driving frequency of SIS18},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:period_18h1}{
 name=$T_{h=1}^{SIS18}$,
-description={Revolution period of SIS18},
+description={Period of the rf cavity revolution frequency of SIS18},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:period_18h2}{
 name=$T_{h=2}^{SIS18}$,
-description={Period of the caivity frequency of SIS18},
+description={Period of the rf cavity driving frequency of SIS18},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:100h1}{
 name=$f_{h=1}^{SIS100}$,
-description={Revolution frequency of SIS100},
+description={RF cavity revolution frequency of SIS100},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:100h10}{
 name=$f_{h=10}^{SIS100}$,
-description={Caivity frequency of SIS100},
+description={RF cavity driving frequency of SIS100},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:period_100h1}{
 name=$T_{h=1}^{SIS100}$,
-description={Revolution period of SIS100},
+description={Period of RF cavity revolution frequency of SIS100},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:period_100h10}{
 name=$T_{h=10}^{SIS100}$,
-description={Period of the caivity frequency of SIS100},
+description={Period of the rf cavity driving frequency of SIS100},
 sort=symbolpi, type=symbolslist
 }
 \newglossaryentry{symb:pha_shift}{
@@ -126,7 +126,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:chromaticity_x}{
 name=$Q_x$,
-description={Horizontal Chromaticity of SIS18},
+description={Horizontal chromaticity of SIS18},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:chromaticity_y}{
@@ -146,7 +146,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:radius}{
 name=$\frac{\Delta{R}}{R}$,
-description={Ratio between the excursive radius and the designed radius.},
+description={Ratio between the excursive radius and the designed radius},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:freq}{
@@ -166,12 +166,12 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:best_align}{
 name=$t_{best}$,
-description={Best estimate of alignment of Reference RF Signals of SIS18 and SIS100},
+description={Best estimate of alignment of zero crossing points of Reference RF Signals of SIS18 and SIS100},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:probable_aligh}{
 name=$\delta t_{best}$,
-description={Uncertainty of the best estimate of alignment of Reference RF Signals of SIS18 and SIS100},
+description={Uncertainty of the best estimate of alignment of zero crossing points of Reference RF Signals of SIS18 and SIS100},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:harmonic}{
@@ -181,12 +181,12 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:h1phase100}{
 name=$\psi_{h=1}^{SIS100}$,
-description={Predicted SIS100 rf phase at h=1 },
+description={Predicted SIS100 h=1 rf phase at $t_{\psi}$},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:h15phase18}{
 name=$\psi_{h=1/5}^{SIS18}$,
-description={Predicted SIS18 rf phase at h=1/5 },
+description={Predicted SIS18 h=1/5 rf phase at $t_{\psi}$ },
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:un_h1phase100}{
@@ -201,12 +201,12 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:h10phase100}{
 name=$\phi_{h=10}^{SIS100}$,
-description={RF phase at the cavity frequency h=10 of SIS100 },
+description={RF phase at the cavity frequency h=10 of SIS100 at $t_{\psi}$},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:h2phase18}{
 name=$\phi_{h=2}^{SIS18}$,
-description={RF phase at the cavity frequency h=2 of SIS18  },
+description={RF phase at the cavity frequency h=2 of SIS18 at $t_{\psi}$  },
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:un_h10phase100}{
@@ -221,7 +221,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:prediction_time}{
 name=$t_{\psi}$,
-description={Time of the rf phase prediction},
+description={Time of the predicted phase},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:uncertainty_time}{
@@ -231,34 +231,34 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:upper_Ttime}{
 name=$T_{phase\_ shift}^{upper\_ bound}$,
-description={Upper bound time of the phase shfit process},
+description={Upper bound time of the phase shift process},
 sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:un_upper_time_phase_shift}{
 name=$\delta T_{phase\_ shift}^{upper\_ bound}$,
-description={Uncertainty of the upper bound time of the phase shfit process},
+description={Uncertainty of the upper bound time of the phase shift process},
 sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:phase_just_frequency_beating}{
 name=$\Delta \phi_{adjustment}$,
-description={Phase adjustment of the frequency beating method},
+description={Phase adjustment of the frequency beating method, calculated by B2B source SCU},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_s_alignment}{
 name=$\psi_{s\_alignment}$,
-description={RF phase of the cavity frequency at the start of the probable rang of alignment},
+description={RF phase of the cavity driving frequency at the start of the probable rang of alignment},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:win_correction}{
 name=$\Delta t_{win \_correct}$,
-description={Time correction for the start of the probable range of alignment to the best estimate of the start of the synchronization  window},
+description={Time correction for the start of the probable range of alignment [$t_{best}$-$\delta t_{best}$,$t_{best}$+$\delta t_{best}$] to the best estimate of the start of the synchronization window},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:win_start}{
 name=$WIN_{start}$,
-description={Start of the synchronization window},
+description={Start of the synchronization window, calculated by B2B source SCU},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:G}{
@@ -288,7 +288,7 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:b}{
 name=$\beta$,
-description={},
+description={Relative speed to the speed of light},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:t_b2b}{
@@ -303,47 +303,67 @@ sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:phase_shift_actual}{
 name=$f_{actual}$ ,
-description={Actual rf freqnecy modulation profile},
+description={Actual rf freqnecy modulation profile, calculated by PSM},
 sort=symbollambda, type=symbolslist
 } 
 \newglossaryentry{symb:phase_shift_normalized}{
 name=$f_{normalized}$ ,
-description={Normalized rf freqnecy modulation profile},
+description={Normalized rf frequency modulation profile, preloaded from SM},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:ext_pre}{
 name=$D_{ext}$ ,
-description={Rising time of the extraction kicker of SIS18},
+description={Extraction kicker delay},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:inj_pre}{
 name=$D_{inj}$ ,
-description={Rising time of the injection kicker of SIS100},
+description={Injection kicker delay},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:bucket_pattern}{
 name=$d_{pattern}$ ,
-description={Delay compensation for the specified bucket pattern},
+description={Time delay for a specified bucket pattern},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:tsrc}{
 name=$t_{src}$,
-description={Delay compensation between the virtual cavity and the extraction position},
+description={Time corresponds to the distance between the virtual RF cavity driving signals and the extraction position of the source synchrotron},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:ttrg}{
 name=$t_{trg}$,
-description={Delay compensation between the virtual cavity and the injection position},
+description={Time corresponds to the distance between the virtual RF cavity driving signals and the injection position of the target synchrotron},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:temg}{
 name=$t_{emg}$,
-description={Delay compensation between the virtual RF cavity and the emergency extraction position},
+description={Time corresponds to the distance between the virtual RF cavity and the emergency extraction position of SIS100},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:Demg}{
 name=$D_{emg}$,
-description={Rising time of the extraction kicker of SIS100},
+description={Extraction kicker delay of SIS100},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_diff_s}{
+name=$\Delta \varphi1$,
+description={Phase difference between the Reference RF Signal and the Synchronization Reference Signal of the source synchrotron, measured by PAM module},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_diff_t}{
+name=$\Delta \varphi2$,
+description={Phase difference between the Reference RF Signal and the Synchronization Reference Signal of the target synchrotron, measured by PAM module},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_diff_s_T0}{
+name=$\psi1$,
+description={Phase difference between the Reference RF Signal and the Synchronization Reference Signal of the source synchrotron at BuTiS T0 edges, predicted by PAP module},
+sort=symbollambda, type=symbolslist
+}
+\newglossaryentry{symb:phase_diff_t_T0}{
+name=$\psi2$,
+description={Phase difference between the Reference RF Signal and the Synchronization Reference Signal of the target synchrotron at BuTiS T0 edges, predicted by PAP module},
 sort=symbollambda, type=symbolslist
 }
 %Befehle für Abbreviation
@@ -425,6 +445,11 @@ description={High Energy Storage Ring},type=abbreslist
 name={LLRF},
 description={Low-level RF },type=abbreslist
 }
+\newglossaryentry{CSCO}{
+name={CSCO},
+description={Common Systems Control Systems},type=abbreslist
+}
+
 \newglossaryentry{MPS}{
 name={MPS},
 description={Machine Protection System},type=abbreslist
@@ -481,7 +506,7 @@ description={Central Processing Unit},type=abbreslist
 }
 \newglossaryentry{PAM}{
 name={PAM},
-description={Central Processing Unit},type=abbreslist
+description={Phase Advance Measurement},type=abbreslist
 }
 \newglossaryentry{PAP}{
 name={PAP},
@@ -517,11 +542,25 @@ name={BPID},
 description={Beam Process ID},type=abbreslist
 }
 
+\newglossaryentry{IP}{
+name={IP},
+description={Internet Protocol},type=abbreslist
+}
+
 
 %Befehle für Glossary
 
 % Generate the glossary
 \makenoidxglossaries
+\newglossaryentry{glos:uncertainty}{
+name={uncertainty},
+description={A non-negative parameter characterizing the dispersion of the values attributed to a measured quantity}
+}
+\newglossaryentry{glos:error_pro}{
+name={error propagation},
+description={Uncertainties in the original measurements ``propagate`` through calculations to cause uncertainties in the calculated final answers}
+}
+
 \newglossaryentry{glos:Rrf}{
 name={Reference RF Signal},
 description={Signal generated by the Group DDS and delivered to an individual RF cavity as a reference for the gap signal}
@@ -554,7 +593,7 @@ name={trueness},
 description={Closeness of agreement between the average actual start of the synchronization window of different SCUs and the best estimation start of the synchronization window}
 }
 \newglossaryentry{glos:frame_loss_rate}{
-name={Frame loss rate},
+name={frame loss rate},
 description={The ratio of the number of the lost frames to the number of the theoretic received frames of a tested port}
 }
 \newglossaryentry{glos:latency}{
