add new chapter: FAIR application of B2B transfer system

--- a/main.bib
+++ b/main.bib
@@ -36,6 +36,14 @@
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\PZSEBC8N\\S0168900206000507.html:text/html}
 }
 
+@inproceedings{kester_status_2014,
+	title = {Status of the {FAIR} accelerator facility},
+	booktitle = {this conf. {WEPRO}060},
+	author = {Kester, O. and Barth, W. and Dolinskyy, O. and Hagenbuck, F. and Knie, K. and Reich-Sprenger, H. and Simon, H. and Spiller, P. J. and Weinrich, U. and Winkler, M. and {others}},
+	year = {2014},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\B79WDNFJ\\Kester et al. - 2014 - Status of the FAIR accelerator facility.pdf:application/pdf}
+}
+
 @article{beck_new_2012,
 	title = {The new {White} {Rabbit} based timing system for the {FAIR} facility},
 	url = {http://accelconf.web.cern.ch/Accelconf/pcapac2012/papers/fria01.pdf},
