Application: add table for regulation

--- a/main.tex
+++ b/main.tex
@@ -396,7 +396,7 @@ description={Mismatch between the bunch and bucket center},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:syn_win_length}{
-name=$T_sync\_win$,
+name=$T_{sync\_win}$,
 description={Length of the synchronization window},
 sort=symbollambda, type=symbolslist
 }
