Application 1st version is done

--- a/main.tex
+++ b/main.tex
@@ -427,6 +427,11 @@ sort=symbollambda, type=symbolslist
 }
 
 %Befehle für Abbreviation
+\newglossaryentry{GCD}
+{
+name={GCD},
+description={Greatest Common Divisor},type=abbreslist
+}
 \newglossaryentry{TOF}
 {
 name={TOF},
