--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,56 @@
 
+@book{wiedemann_particle_2015,
+	title = {Particle {Accelerator} {Physics}},
+	isbn = {978-3-319-18317-6},
+	abstract = {This book by Helmut Wiedemann is a well-established, classic text, providing an in-depth and comprehensive introduction to the field of high-energy particle acceleration and beam dynamics.The present 4th edition has been significantly revised, updated and expanded. The newly conceived Part I is an elementary introduction to the subject matter for undergraduate students. Part II gathers the basic tools in preparation of a more advanced treatment, summarizing the essentials of electrostatics and electrodynamics as well as of particle dynamics in electromagnetic fields. Part III is an extensive primer in beam dynamics, followed, in Part IV, by an introduction and description of the main beam parameters and including a new chapter on beam emittance and lattice design. Part V is devoted to the treatment of perturbations in beam dynamics. Part VI then discusses the details of charged particle acceleration. Parts VII and VIII introduce the more advanced topics of coupled beam dynamics and describe very intense beams – a number of additional beam instabilities are introduced and reviewed in this new edition. Part IX is an exhaustive treatment of radiation from accelerated charges and introduces important sources of coherent radiation such as synchrotrons and free-electron lasers. The appendices at the end of the book gather useful mathematical and physical formulae, parameters and units. Solutions to many end-of-chapter problems are given.This textbook is suitable for an intensive two-semester course starting at the senior undergraduate level.},
+	language = {en},
+	publisher = {Springer},
+	author = {Wiedemann, Helmut},
+	month = jul,
+	year = {2015},
+	note = {Google-Books-ID: oR0\_CgAAQBAJ},
+	keywords = {Science / Mechanics / General, Science / Physics / Atomic \& Molecular, Science / Physics / General, Science / Physics / Nuclear, Science / Weights \& Measures, Technology \& Engineering / Measurement}
+}
+
+@misc{_accelerators_????,
+	title = {Accelerators for {Society}},
+	url = {http://www.accelerators-for-society.org/about-accelerators/index.php?id=21#linac},
+	urldate = {2016-09-20},
+	file = {Accelerators for Society:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\NXKJJEKI\\index.html:text/html}
+}
+
+@techreport{barbalat_applications_1994,
+	title = {Applications of particle accelerators},
+	url = {http://cds.cern.ch/record/260280/files/P00021907.pdf},
+	urldate = {2016-09-20},
+	institution = {CERN},
+	author = {Barbalat, Oscar},
+	year = {1994},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5XKMB6KK\\Barbalat - 1994 - Applications of particle accelerators.pdf:application/pdf}
+}
+
+@misc{_fair_2011,
+	title = {{FAIR} - {Facility} for {Antiproton} and {Ion} {Research}},
+	url = {https://www.gsi.de//forschungbeschleuniger/fair.htm},
+	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
+	urldate = {2016-09-20},
+	journal = {GSI},
+	month = may,
+	year = {2011},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ABZ5CDSE\\fair.html:text/html}
+}
+
+@misc{_gsi_2011,
+	title = {{GSI} {Helmholtzzentrum} für {Schwerionenforschung} {GmbH}},
+	url = {https://www.gsi.de//start/aktuelles.htm},
+	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
+	urldate = {2016-09-20},
+	journal = {GSI},
+	month = jun,
+	year = {2011},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5JXSJ7I6\\aktuelles.html:text/html}
+}
+
 @book{lee_accelerator_2011,
 	address = {Singapore},
 	edition = {3},
@@ -64,6 +116,13 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\5XXC5KX9\\Hoffmann - 2008 - FESA–The front-End Software architecture at FAIR.pdf:application/pdf}
 }
 
+@misc{_fair_????,
+	title = {{FAIR} {Fast} {Beam} {Abort} {System}},
+	url = {https://fair-wiki.gsi.de/foswiki/pub/FC2WG/FairC2WGMinutes/20151021_Fast_Beam_Abort_System_Mandakovic.pdf},
+	urldate = {2016-09-21},
+	file = {Fast Beam Abort System @ FAIR - 20151021_Fast_Beam_Abort_System_Mandakovic.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FG2FZPNT\\20151021_Fast_Beam_Abort_System_Mandakovic.html:text/html}
+}
+
 @article{klingbeil_new_2011,
 	title = {New digital low-level rf system for heavy-ion synchrotrons},
 	volume = {14},
@@ -99,4 +158,44 @@
 	year = {2011},
 	pages = {418--420},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\2IDXXPQS\\Zipfel et al. - 2011 - Recent Progress on the Technical Realization of th.pdf:application/pdf}
+}
+
+@techreport{bohl_barrier_2000,
+	title = {Barrier buckets in the {CERN} {SPS}},
+	url = {http://cds.cern.ch/record/446802},
+	urldate = {2016-09-20},
+	author = {Bohl, T. and Shaposhnikova, Elena and Linnecar, Trevor Paul R.},
+	year = {2000},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Z2NRHMBI\\446802.html:text/html}
+}
+
+@article{baudrenghien_low-level_2010,
+	title = {Low-level {RF}},
+	volume = {13},
+	url = {https://cas.web.cern.ch/cas/Denmark-2010/Writeups/Baudrenghien.docx},
+	number = {14},
+	urldate = {2016-09-20},
+	journal = {transition},
+	author = {Baudrenghien, P.},
+	year = {2010},
+	pages = {15},
+	file = {[DOC] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VUCAN2EN\\Baudrenghien - 2010 - Low-level RF.doc:application/msword}
+}
+
+@article{grieser_beam_2015,
+	title = {Beam phase feedback in a heavy-ion synchrotron with dual-harmonic cavity system},
+	url = {http://tuprints.ulb.tu-darmstadt.de/4634/},
+	urldate = {2016-09-21},
+	author = {Grieser, Jochen Michael},
+	year = {2015},
+	file = {[PDF] tu-darmstadt.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\3MG6UJ9P\\Grieser - 2015 - Beam phase feedback in a heavy-ion synchrotron wit.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Q9C4XFZH\\4634.html:text/html}
+}
+
+@article{bohne_status_1986,
+	title = {Status report on the {SIS}/{ESR} project at {GSI}},
+	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
+	urldate = {2016-09-02},
+	author = {Böhne, D. and Prange, H. and Blasche, K. and Franzke, B.},
+	year = {1986},
+	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\GEEH2VAD\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
 }
